search method added

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="card-header fs-5 fw-semibold">Temperatures</div>
                     <i class="fa-solid fa-temperature-three-quarters fs-1 mt-3"></i>
                     <div class="card-body">
-                        <p class="temp card-text mb-0">Temperature is ( __ , __)</p>
+                        <p class="desc card-text mb-0">Description : ( __ , __)</p>
                         <p class="min-temp card-text mb-0">Min Temperature is ( __ , __)</p>
                         <p class="max-temp card-text mb-0">Max Temperature is ( __ , __)</p>
                     </div>
